fixed bug with strength and cardio page inserting new exercises, changed pictures in strength page

--- a/views/cardio.handlebars
+++ b/views/cardio.handlebars
@@ -180,7 +180,7 @@
                                 <option value="3">3</option>
                             </select>
                             <br>
-                            <button type="submit">Add Exercise</button>
+                            <button type="submit" class="btn btn-info" style="margin-top: 5px">Add Exercise</button>
                         </div>
                     </form>
                 </div>
