--- a/views/muscle_building.handlebars
+++ b/views/muscle_building.handlebars
@@ -70,6 +70,11 @@
                                     {{#if_eq day 1}}
                                     {{#if this.completed}}
                                       <p> - {{ex_name}}  {{intervals}} </p>
+                                      <form method="POST" action="/muscle_buildingReset?_method=PUT" class="button-size">
+                                      <input type="hidden" name= "mb_id" type="text"
+                                      value={{id}}>
+                                      <button type="submit" class="btn btn-info">NOT COMPLETE!</button>
+                                      </form>
                                     {{/if}}
                                     {{/if_eq}}
                                   {{/each}}
@@ -105,6 +110,11 @@
                                     {{#if_eq day 2}}
                                     {{#if this.completed}}
                                       <p> - {{ex_name}}  {{intervals}} </p>
+                                      <form method="POST" action="/muscle_buildingReset?_method=PUT" class="button-size">
+                                      <input type="hidden" name= "mb_id" type="text"
+                                      value={{id}}>
+                                      <button type="submit" class="btn btn-info">NOT COMPLETE!</button>
+                                      </form>
                                     {{/if}}
                                     {{/if_eq}}
                                   {{/each}}
@@ -140,6 +150,11 @@
                                     {{#if_eq day 3}}
                                     {{#if this.completed}}
                                       <p> - {{ex_name}}  {{intervals}} </p>
+                                      <form method="POST" action="/muscle_buildingReset?_method=PUT" class="button-size">
+                                      <input type="hidden" name= "mb_id" type="text"
+                                      value={{id}}>
+                                      <button type="submit" class="btn btn-info">NOT COMPLETE!</button>
+                                      </form>
                                     {{/if}}
                                     {{/if_eq}}
                                   {{/each}}
@@ -175,6 +190,11 @@
                                     {{#if_eq day 4}}
                                     {{#if this.completed}}
                                       <p> - {{ex_name}}  {{intervals}} </p>
+                                      <form method="POST" action="/muscle_buildingReset?_method=PUT" class="button-size">
+                                      <input type="hidden" name= "mb_id" type="text"
+                                      value={{id}}>
+                                      <button type="submit" class="btn btn-info">NOT COMPLETE!</button>
+                                      </form>
                                     {{/if}}
                                     {{/if_eq}}
                                   {{/each}}
