--- a/views/cardio.handlebars
+++ b/views/cardio.handlebars
@@ -34,7 +34,7 @@
                         cardio workout. Don’t forget hit play on your playlist!</p>
                     <hr class="my-4">
                      <iframe src="https://open.spotify.com/embed/user/spotify/playlist/37i9dQZF1DWSJHnPb1f0X3" width="1000" height="380"
-                    frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    frameborder="0" allowtransparency="true" allow="encrypted-media" style="width: 100%"></iframe>
                 </div>
             </div>
         </div>
@@ -173,7 +173,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-12 center">
             <div class="card bg-light mb-3" style="width: 71rem;">
                 <div class="card-body" id="New">
                     <h2 class="card-title">Insert Your Own Exercise!</h2>
