--- a/views/muscle_building.handlebars
+++ b/views/muscle_building.handlebars
@@ -34,7 +34,7 @@
               Follow this step by step guide to complete your
               muscle building workout. Don’t forget hit play on your playlist!</p>
             <hr class="my-4">
-            <iframe src="https://open.spotify.com/embed/user/12168588908/playlist/4YvhNsxfaBVBOHuBybdS1A" width="1000" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <iframe src="https://open.spotify.com/embed/user/12168588908/playlist/4YvhNsxfaBVBOHuBybdS1A" width="1000" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" style="width: 100%"></iframe>
           </div>
         </div>
       </div>
